editors/tree-sitter-piton/grammar.js
// Generated by `piton grammar`. Edit crates/piton-grammar instead.
//
// A line-oriented grammar for highlighting Piton.
//
// One design note worth knowing before editing: names, declaration keywords and
// prose all use the single `word` token. Piton lines are ambiguous until their
// end — `shape Concrete:` is a declaration and `shape concrete text` is prose —
// and giving each role its own token would force that decision on the lexer,
// which cannot see far enough. With one token the ambiguity becomes a parse
// conflict instead, which the GLR parser resolves by looking ahead.

const NAME = /[A-Za-z_][A-Za-z0-9_-]*/;

module.exports = grammar({
  name: 'piton',

  extras: $ => [/[ \t]/],

  // Substituted into its callers so that the conflicts below can name the
  // rules a reader recognises.
  inline: $ => [$._piece],

  // A line is ambiguous until its end: `shape Concrete:` is a declaration and
  // `shape concrete text` is prose. The parser explores both and lets the
  // colon decide.
  conflicts: $ => [
    [$.keyword_declaration, $.value],
  ],

  rules: {
    // A file is a sequence of lines. Requiring the newline matters: without it
    // two statements could sit side by side, which would make every keyword
    // valid in the middle of a sentence and turn prose into parse errors.
    //
    // Lines are grouped rather than simply repeated because of one rule: a
    // `key:` line written inside a run of prose is prose. A run ends at a blank
    // line and nowhere else, so a property is not derivable until that blank
    // line arrives — which is what stops the lexer producing a `key` token
    // there at all, since it only ever scans for tokens the parser can use.
    source_file: $ => seq(
      repeat(choice($._structural_line, $._prose_run, $._blank_line, $._comment_line)),
      // A run of prose may also end at the end of the file. Nothing may follow
      // it there either — not even the last line of the file — because a `key`
      // the parser could still use is a `key` the lexer will still produce, and
      // the longest match would take it in preference to the words it is made
      // of.
      optional(choice($._trailing_prose, $._last_line)),
    ),

    _structural_line: $ => seq($._entry, optional($.comment), $._newline),

    // A fenced code block is kept exactly as written, so nothing inside it is
    // lexed as Piton: between its fences the only tokens are whole lines.
    _code_line: $ => seq($.code_block, $._newline),

    code_block: $ => seq(
      field('open', $.fence_open),
      $._newline,
      repeat(choice(seq($.code, $._newline), $._newline)),
      field('close', $.fence_close),
    ),

    // The opening fence carries its info string, so that it is longer than
    // the word the same characters would otherwise be.
    fence_open: $ => token(prec(1, /(```+[^`\n]*|~~~+[^\n]*)/)),

    // A closing fence is nothing but the fence, so a line such as ```` ```js ````
    // inside the block is longer as `code` and stays content. Tree-sitter
    // cannot count, so any run of three or more closes the block.
    fence_close: $ => token(prec(1, /(```+|~~~+)[ \t]*/)),

    code: $ => token(prec(-2, /[^ \t\r\n][^\n]*/)),

    _blank_line: $ => $._newline,

    // Trivia: a comment never breaks a string block, so it never ends a run.
    _comment_line: $ => seq($.comment, $._newline),

    _prose_run: $ => seq($._trailing_prose, $._blank_line),

    // Right-associative: a run should always prefer taking the next line over
    // ending, which is the whole point of it.
    _trailing_prose: $ => prec.right(seq(
      // A fence is prose as far as the run is concerned: a `key:` right after
      // one is still a sentence until a blank line.
      choice($._prose_line, $._code_line),
      repeat(choice($._prose_line, $._comment_line, $._code_line)),
      // A file need not end with a newline, and the line that has none is
      // still part of the run.
      optional(seq($.text_line, optional($.comment))),
    )),

    _prose_line: $ => seq($.text_line, optional($.comment), $._newline),

    _last_line: $ => seq($._entry, optional($.comment)),

    // Everything a line may be except prose, which is grouped into runs above.
    _entry: $ => choice(
      $.import_statement,
      $.use_statement,
      $.export_statement,
      $.anchor_declaration,
      $.keyword_declaration,
      $.property,
      $.list_item,
      $.spread_item,
    ),

    _newline: $ => token(/\r?\n/),

    comment: $ => token(seq('//', /[^\n]*/)),

    // ---- imports and exports ------------------------------------------

    import_statement: $ => seq(
      'from',
      field('path', $.path),
      choice('import', 'export'),
      // `piton format` breaks long lists onto their own lines.
      choice('*', seq(optional($._newline), $.import_list)),
    ),

    // A comma continues the list, even across the line breaks `piton format`
    // introduces once a list gets long.
    import_list: $ => prec.right(seq(
      $.import_item,
      repeat(seq(',', optional($._newline), $.import_item)),
      optional(','),
    )),

    // A second word on an import item is an alias, never the next item.
    import_item: $ => prec.right(seq(field('name', $.word), optional(field('alias', $.word)))),

    use_statement: $ => seq('use', field('path', $.path)),

    export_statement: $ => seq('export', field('name', $.word)),

    path: $ => token(/[.@\/][^\s]*/),

    // ---- declarations ---------------------------------------------------

    anchor_declaration: $ => seq(
      optional('export'),
      optional('abstract'),
      'anchor',
      field('name', $.word),
      optional($.extends_clause),
      optional($.as_clause),
      ':',
    ),

    // `my-keyword Name:` — sugar for `anchor Name extends MyKeyword:`.
    keyword_declaration: $ => prec.dynamic(1, seq(
      optional('export'),
      field('keyword', $.word),
      field('name', $.word),
      optional($.extends_clause),
      optional($.as_clause),
      ':',
    )),

    extends_clause: $ => seq('extends', field('name', $.word), repeat(seq(',', field('name', $.word)))),

    as_clause: $ => seq('as', field('keyword', $.word)),

    // ---- block entries -----------------------------------------------------

    // Right-associative: a value runs to the end of its line, so the parser
    // should always prefer extending it over closing the entry.
    property: $ => prec.right(choice(
      seq(field('key', $.key), optional($.value)),
      seq(
        field('key', $.typed_key),
        $.type,
        repeat(seq('::', $.type)),
        optional(seq(':', optional($.value))),
      ),
    )),

    // The colon is part of the key token: it is the only thing that tells a
    // property apart from a line of prose, and the lexer needs to see it.
    key: $ => token(seq(NAME, /[ \t]*/, ':')),
    typed_key: $ => token(seq(NAME, /[ \t]*/, '::')),

    type: $ => prec.right(seq(
      optional('extends'),
      field('name', choice($.builtin_type, $.word)),
      repeat(seq('[', ']')),
    )),

    builtin_type: $ => choice('string', 'number', 'boolean', 'null', 'list', 'dictionary', 'anchor', 'any', 'simple', 'complex'),

    // `- key: value` is a dictionary written as one element, so a list item
    // takes a property as readily as a value.
    list_item: $ => prec.right(2, seq('-', optional(choice($.property, $.value)))),

    spread_item: $ => prec.right(2, seq(choice('++', '+'), optional($.value))),

    text_line: $ => $.value,

    // ---- values ---------------------------------------------------------------

    // A line-level value: prose commas and parentheses are just text.
    value: $ => prec.right(repeat1(choice($._piece, ','))),

    // An inline-list element stops at the comma that separates it.
    element: $ => prec.right(repeat1($._piece)),

    _piece: $ => choice(
      $.url,
      $.interpolation,
      $.string,
      $.number,
      $.constant,
      $.inline_list,
      $.escape,
      $.operator,
      $.word,
      '(',
      ')',
    ),

    inline_list: $ => seq(
      '[',
      optional(seq($.element, repeat(seq(',', optional($.element))))),
      ']',
    ),

    // The sigil and its brace are one token so that `reference{` cannot be
    // mistaken for the word `reference`. Any run of prose may be a sigil, so
    // the token is longer than the word it would otherwise lex as and wins.
    interpolation: $ => seq($.sigil, optional($.expression), '}'),

    sigil: $ => token(seq(optional(/[^\s{}\[\](),"\\]+/), '{')),

    // Inside `{ }` bare words are references, so identifiers replace prose.
    expression: $ => repeat1(choice(
      $.self_reference,
      $.constant,
      $.string,
      $.number,
      $.operator,
      $.identifier,
      '.',
      ',',
      '(',
      ')',
      '[',
      ']',
    )),

    identifier: $ => token(NAME),

    self_reference: $ => choice('this', 'self', 'super'),

    constant: $ => choice('true', 'false', 'null'),

    string: $ => token(seq('"', repeat(choice(/\\./, /[^"\\\n]/)), '"')),

    number: $ => token(/\d[\d_]*(\.\d[\d_]*)?/),

    escape: $ => token(seq('\\', /./)),

    operator: $ => choice(
      '++', '&&', '||', '==', '!=', '>=', '<=',
      '+', '-', '*', '/', '%', '<', '>', '?', ':',
    ),

    // A URL is one token so that its `//` is never read as a comment. It is
    // longer than the `key` token that `https:` would otherwise match, and
    // longest-match settles it.
    url: $ => token(/[A-Za-z][A-Za-z0-9+.-]*:\/\/[^\s]*/),

    // Prose. `:` is excluded so that a property key always out-matches a word.
    word: $ => token(prec(-1, /[^\s{}\[\](),"\\:\n]+/)),
  }
});
